--- a/LaserControl.csproj
+++ b/LaserControl.csproj
@@ -33,6 +33,42 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Eco.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\PublicLibs\Eco.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Eco.Gameplay, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\PublicLibs\Eco.Gameplay.dll</HintPath>
+    </Reference>
+    <Reference Include="Eco.ModKit, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\PublicLibs\Eco.ModKit.dll</HintPath>
+    </Reference>
+    <Reference Include="Eco.Mods, Version=0.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\PublicLibs\Eco.Mods.dll</HintPath>
+    </Reference>
+    <Reference Include="Eco.Shared, Version=0.7.2.5, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\PublicLibs\Eco.Shared.dll</HintPath>
+    </Reference>
+    <Reference Include="Eco.Simulation, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\PublicLibs\Eco.Simulation.dll</HintPath>
+    </Reference>
+    <Reference Include="Eco.Stats, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\PublicLibs\Eco.Stats.dll</HintPath>
+    </Reference>
+    <Reference Include="Eco.World, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\PublicLibs\Eco.World.dll</HintPath>
+    </Reference>
+    <Reference Include="LiteDB, Version=4.1.1.0, Culture=neutral, PublicKeyToken=4ee40123013c9f27, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\PublicLibs\LiteDB.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -62,42 +98,6 @@
     <Compile Include="Tools\SpawnMeteorThread.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Eco.Core\Eco.Core.csproj">
-      <Project>{be1761ab-69f5-481c-a4bf-9a7251c02596}</Project>
-      <Name>Eco.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Eco.Gameplay\Eco.Gameplay.csproj">
-      <Project>{5c980505-2974-4b4b-b56a-2be2422e98aa}</Project>
-      <Name>Eco.Gameplay</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Eco.ModKit\Eco.ModKit.csproj">
-      <Project>{c09e1100-6122-4e22-ba57-4f335c82d3b7}</Project>
-      <Name>Eco.ModKit</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Eco.Mods\Eco.Mods.csproj">
-      <Project>{7a3fb11d-3a73-4b0c-b991-7326b54ff606}</Project>
-      <Name>Eco.Mods</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Eco.Plugins\Eco.Plugins.csproj">
-      <Project>{5e8e63d5-9898-4830-9918-8dad0b995bb3}</Project>
-      <Name>Eco.Plugins</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Eco.Server\Eco.Server.csproj">
-      <Project>{72534cef-6417-4905-bdea-3e827114afd8}</Project>
-      <Name>Eco.Server</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Eco.Shared\Eco.Shared.csproj">
-      <Project>{510558a8-a88e-473f-b07d-918e696c81e1}</Project>
-      <Name>Eco.Shared</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Eco.Simulation\Eco.Simulation.csproj">
-      <Project>{7d66ec71-4045-460e-8f16-7f5b64e79939}</Project>
-      <Name>Eco.Simulation</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Eco.World\Eco.World.csproj">
-      <Project>{08bd87d1-b811-4665-b5cd-52e331932fb8}</Project>
-      <Name>Eco.World</Name>
-    </ProjectReference>
     <ProjectReference Include="..\EcoColorLib\EcoColorLib.csproj">
       <Project>{869fe5e3-595a-43c2-8149-701e1cc72396}</Project>
       <Name>EcoColorLib</Name>
